--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "edge.js": "^1.1.4",
     "express": "^4.17.1",
     "express-edge": "^1.0.0",
+    "express-fileupload": "^1.1.5",
     "mongoose": "^5.6.7"
   },
   "devDependencies": {
